# lightning-crossval

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: getting_started.ipynb
src/lightning_cv/: __init__.py  __metadata__.py  _optional.py  _typing.py  config.py  data.py  fabric.py  module.py  split.py  trainer.py  utils.py
src/lightning_cv/callbacks/: __init__.py  base.py  callbacks.py  checkpoint.py  logger.py  lr_monitor.py  mode.py  perf_monitor.py  progress.py  stopping.py  summary.py  timer.py  utils.py
src/lightning_cv/tuning/: __init__.py  callbacks.py  config.py  hyperparameters.py  tuner.py  utils.py
src/lightning_cv/typehints/: __init__.py  config.py  data.py  module.py  split.py
src/lightning_cv/utils/: checkpointing.py  dataclasses.py  foldutils.py  serde.py  stopping.py  strategies.py  validators.py
tests/: conftest.py
tests/unit/: test_attrs_validators.py  test_callbacks.py  test_checkpointing_mixin_utils.py  test_cv_split.py  test_data.py  test_dataclass_utils.py  test_fabric.py  test_foldutils.py  test_has_pydantic.py  test_stopping_reason_messages.py  test_trainer.py  test_user_config_serde.py
tests/unit/tuning/: conftest.py  test_tuning_config.py  test_tuning_hyperparameters.py  test_tuning_utils.py
