[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning-cv"
version = "0.0.1"
authors = [{ name = "Cody Martin", email = "codycmar10@gmail.com" }]
description = "Cross validation using Lightning Fabric"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=2",
    "lightning>=2",
    # "pandas",
    "pydantic",
]

[project.urls]
"Homepage" = "https://github.com/cody-mar10/lightning-crossval"
"Bug Tracker" = "https://github.com/cody-mar10/lightning-crossval/issues"

[tool.ruff]
src = ["src"]
line-length = 90
